# elixir_lancedb

./: .gitignore  Cargo.toml  README.md  mix.exs
.github/workflows/: release.yml
lib/: elixir_lancedb.ex
lib/elixir_lancedb/: application.ex  caller.ex  db.ex  error.ex  native.ex  repo.ex  schema.ex  server.ex  table.ex
lib/elixir_lancedb/ecto/adapters/: adapter.ex  supervisor.ex
lib/elixir_lancedb/ecto/sql/: adapter.ex
lib/elixir_lancedb/native/: array.ex  polars.ex  schema.ex  shared.ex  table.ex
lib/elixir_lancedb/native/schema/: column_alteration.ex  field.ex  infer.ex  new_column_transform.ex
lib/elixir_lancedb/native/table/: full_text_search_query_request.ex  index.ex  merge_insert_config.ex  optimize_action.ex  query_filter.ex  query_request.ex  update_config.ex  vector_query_request.ex  vectory_query_request.ex
lib/elixir_lancedb/otp/: connection_server.ex  pool.ex
lib/elixir_lancedb/protocol/: db_connection.ex
lib/elixir_lancedb/schema/: field.ex  field_types.ex
lib/elixir_lancedb/table/: index_config.ex  table.ex  table_registry.ex  table_server.ex  table_supervisor.ex
native/elixir_lancedb/: Cargo.toml  README.md
native/elixir_lancedb/src/: atoms.rs  conversion.rs  db.rs  error.rs  lib.rs  runtime.rs  schema.rs  term_from_arrow.rs  term_to_arrow.rs
native/elixir_lancedb/src/rustler_arrow/: mod.rs  schema.rs  term_from_arrow.rs  term_to_arrow.rs
native/elixir_lancedb/src/rustler_arrow/schema/: child_field.rs  field.rs  field_type.rs  mod.rs
native/elixir_lancedb/src/table/: add.rs  add_columns.rs  alter_columns.rs  count_rows.rs  delete.rs  merge_insert.rs  mod.rs  optimize.rs  query.rs  update.rs
native/elixir_lancedb/src/table/index/: fts.rs  ivf_pq.rs  mod.rs
native/elixir_lancedb/src/table/query/: fts.rs  mod.rs  plain.rs  vector.rs
priv/lance_js/: package-lock.json  package.json
priv/lance_js/src/: db.js  index.js  schema.js  table.js
test/: db_test.exs  native_test.exs
test/js/: db_test.exs  index_config_test.exs  table_test.exs
test/native/: db_conn_test.exs  fts_table_test.exs  infer_test.exs  schema_test.exs  table_test.exs  vector_table_test.exs
