[package]
name = "elixir_lancedb"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "elixir_lancedb"
crate-type = ["cdylib"]

[dependencies]
arrow-array = "54.1"
arrow-data = "54.1"
arrow-ipc = "54.1"
arrow-ord = "54.1"
arrow-schema = "54.1"
arrow-arith = "54.1"
arrow-cast = "54.1"
rustler = { version = "0.36.1", default-features = false, features = [
  "derive",
  "nif_version_2_15",
] }
lancedb = { git = "https://github.com/lancedb/lancedb", tag = "v0.19.1-beta.1" }
tokio = "1.44.2"
once_cell = "1.21.3"
futures-util = "0.3.31"
futures = "0.3.31"
derive_more = { version = "2.0.1", features = ["from"] }
lance = { git = "https://github.com/lancedb/lance", tag = "v0.27.0-beta.3" }

# [features]
# default = ["nif_version_2_15"]
# nif_version_2_15 = ["rustler/nif_version_2_15"]

# [target.x86_64-apple-darwin]
# rustflags = ["-C", "link-arg=-undefined", "-C", "link-arg=dynamic_lookup"]

# [target.aarch64-apple-darwin]
# rustflags = ["-C", "link-arg=-undefined", "-C", "link-arg=dynamic_lookup"]

# # See https://github.com/rust-lang/rust/issues/59302
# [target.x86_64-unknown-linux-musl]
# rustflags = ["-C", "target-feature=-crt-static"]

# # See https://github.com/rust-lang/rust/issues/59302
# [target.aarch64-unknown-linux-musl]
# rustflags = ["-C", "target-feature=-crt-static"]

# [profile.release]
# lto = true
